Closed Bug 1610164 Opened 6 years ago Closed 6 years ago

The adoptedStyleSheets getter shouldn't be marked as throwing

Categories

(Core :: CSS Parsing and Computation, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla74
Tracking Status
firefox74 --- fixed

People

(Reporter: emilio, Assigned: emilio)

References

Details

Attachments

(1 file)

No description provided.

The getter should never throw, and we can tag it as such in the IDL to avoid
useless error outparams.

Blocks: 1520690
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/24f00143c315 Only the adoptedStyleSheets setter throws. r=nordzilla
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla74
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: