Bug 1610164 - Only the adoptedStyleSheets setter throws. r=nordzilla

The getter should never throw, and we can tag it as such in the IDL to avoid
useless error outparams.

Differential Revision: https://phabricator.services.mozilla.com/D60371